<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appcolor"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">


        <FrameLayout
            android:id="@+id/containerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="90dp"
                    >
                    <LinearLayout
                        android:id="@+id/row1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:maxLines="1"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="0"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="40sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:id="@+id/row2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".12"
                            >

                            <Button
                                android:id="@+id/buttonClearMemory"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonClearMemory"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buttonAddToMemory"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonAddToMemory"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buttonSubtractFromMemory"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonSubtractFromMemory"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buttonRecallMemory"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonRecallMemory"
                                android:textSize="21sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row3"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".12" >

                            <Button
                                android:id="@+id/buttonClear"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonClear"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/buttonToggleSign"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonToggleSign"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/buttonDivide"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonDivide"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/buttonMultiply"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonMultiply"
                                android:textSize="25sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row4"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".12" >

                            <Button
                                android:id="@+id/button7"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/button7"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/button8"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/button8"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/button9"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/button9"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/buttonSubtract"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonSubtract"
                                android:textSize="25sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row5"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".12" >

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/button4"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/button5"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/button5"
                                android:layout_weight=".25"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/button6"
                                android:textSize="25sp" />

                            <Button
                                android:id="@+id/buttonAdd"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonAdd"
                                android:textSize="25sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/row6"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".24"
                            android:baselineAligned="false" >

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".75"
                                android:orientation="vertical" >

                                <LinearLayout
                                    android:id="@+id/linearLayout1"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight=".50"
                                    android:textSize="25sp" >


                                    <Button
                                        android:id="@+id/button1"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".35"
                                        android:text="@string/button1"
                                        android:textSize="25sp" />

                                    <Button
                                        android:id="@+id/button2"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".35"
                                        android:text="@string/button2"
                                        android:textSize="25sp" />

                                    <Button
                                        android:id="@+id/button3"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".34"
                                        android:text="@string/button3"
                                        android:textSize="25sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linearLayout2"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight=".50" >

                                    <Button
                                        android:id="@+id/button0"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".66"
                                        android:text="@string/button0"
                                        android:textSize="25sp" />

                                    <Button
                                        android:id="@+id/buttonDecimalPoint"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".34"
                                        android:text="@string/buttonDecimalPoint"
                                        android:textSize="25sp" />
                                </LinearLayout>
                            </LinearLayout>

                            <Button
                                android:id="@+id/buttonEquals"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".25"
                                android:text="@string/buttonEquals"
                                android:textSize="25sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

        </FrameLayout>


        <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/shitstuff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="-24dp"
            android:fontFamily="monospace"
            android:maxLines="1"
            android:background="#ffffff"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="22sp"
            app:itemTextColor="#000000"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/drawermenu"
           />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
